<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="network_edge">Network : EDGE</string>
    <string name="network_3g">Network : 3G</string>
    <string name="network_detecting">Network : Detecting </string>

    <string name="update_speed" formatted="false">Speed current: %s kbit/sec</string>
    <string name="update_downloaded" formatted="false">Progress: %s procent</string>
    <string name="update_connectionspeed" formatted="false">Connection time: %s ms</string>

    <string name="update_downloaded_complete" formatted="false">Speed: %s kbit/sec</string>



<!--    start frame-->
    <string name="go_btn">GO</string>
<!--    boxDataLine-->
    <string name="label_down">DOWNLOAD</string>
    <string name="speed_unit">Mbit/s</string>
    <string name="label_up">UPLOAD</string>

<!--    LinearHostChange-->
    <string name="linear_host_change">Host:</string>


<!--    linearPingType-->
    <string name="ping_linear_text">Ping:</string>
    <string name="host_info">Host Location: %s [Distance: %s km]</string>

<!--    completion Frame-->
    <string name="rate_the_app">Rate the app</string>

<!--    menu layout history-->
    <string name="menu_history_title">History</string>
    <string name="important_messege">important message</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>

<!--    menu layout info-->
    <string name="menu_info_title">Info</string>
    <string name="menu_info_appinfo_title">App Info</string>
    <string name="menu_info_privacypolicy_title">Privacy Policy</string>
    <string name="menu_info_terms_of_use_title">Terms of Use</string>

<!--    menu layout settings-->
    <string name="menu_settings_title">Settings</string>
    <string name="menu_layout_settings_advertisement_label">Advertisement</string>
    <string name="menu_layout_settings_remove_ads_button">Remove ADS</string>

<!--    menu layout support-->
    <string name="menu_support_title">Support</string>
    <string name="menu_layout_support_feedback_label">Feedback</string>
    <string name="menu_layout_support_review_label">App Review</string>


<!--    ui-->
    <string name="rate_app_text_1">Did you like the app?</string>
    <string name="rate_app_text_2">Please rate us 5 stars if you like the app.</string>
    <string name="rate_app_text_3">Please help us improve the app!</string>
    <string name="rate_app_text_4">Describe what you didn\'t like</string>
    <string name="rate_app_text_5">Rate app</string>
    <string name="rate_app_text_6">Rate on google play</string>
    <string name="rate_app_text_8">Send message</string>
    <string name="rate_app_text_9">Rate this app!</string>
    <string name="rate_app_text_7">Enter text</string>
    <string name="rate_dialog_cancel">Remind me later</string>
    <string name="rate_dialog_no">No, thanks</string>
    <string name="rate_dialog_ok">Rate it now</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute Thanks for your support!</string>
    <string name="developer_mail">mail@mail.ru</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>

<!--    onboard-->
    <string name="onboard_1">Welcome to SpeedTest!</string>
    <string name="onboard_1_1">The program will allow you to calculate the connection speed, as well as save the received data</string>
    <string name="onboard_2">How to use?</string>
    <string name="onboard_2_1">Before starting the program, the phone must be idle (at least 10 minutes) for the internal components to cool. if the mobile device was charged or was in the hands of the owner for a long time, the measurements will be erroneous.</string>
    <string name="onboard_3">Try without ads</string>
    <string name="onboard_31">Disable ads for free</string>
    <string name="onboard_31_1">You can remove all ads from the app for one hour just by watching a short video</string>
    <string name="onboard_3_pop">Popular</string>
    <string name="onboard_3_price_1">3 days\nis free</string>
    <string name="onboard_3_price_1_1">Then\n%1$s/month</string>
    <string name="onboard_3_price_2">7 days\nis free</string>
    <string name="onboard_3_price_2_1">Then\n%1$s/year</string>
    <string name="onboard_3_bottom_block_title">Try full access</string>

    <string name="onboard_3_bottom_block_title_3">Try free</string>
    <string name="onboard_3_1">You can cancel your subscription anytime on Google Play. After the end of the free period, the subscription will be paid. Subscriptions will renew automatically every month / year and will be debited</string>
    <string name="onboard_btn">Proceed</string>

<!--    splash-->
    <string name="loading">Getting information about connection</string>
    <string name="loading_done">Done</string>
    <string name="continue_button">Continue</string>

<!--    ad-->
    <string name="ad_attribution" translatable="false">Ad</string>

<!--CARD INFO STRINGS-->
    <string name="sleep_now_card_info_title">Get to know strength of your Network?</string>
    <string name="sleep_now_card_info_summary">Check signal strength, properties, monitor signals</string>
    <string name="clear_data">Clear Data</string>
    <string name="monitor_signal">Monitor Signal</string>
    <string name="properties">Properties</string>
    <string name="connected_n_w_strength">Connected N/W Strength</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="title_activity_monitor">Monitor Wifi Signal</string>
    <string name="dbm">dBm</string>
    <string name="dialog_text">
        WiFi Manager
        \nVersion 1.0
        \nAll rights reserved.
        \n\nContact:
        \nAjay Kaushal
        \najaykaushal465@gmail.com
    </string>

<!--    text title-->
    <string name="text_title_speedtest">speedtest</string>
    <string name="text_title_wifi">Wi-Fi analyzer</string>

<!--    errors-->
    <string name="host_error">There was a problem in getting Host Location. Try again later.</string>

<!--    wifitool-->
    <string name="wifi_text_optimal">Optimal signal level</string>
    <string name="wifi_text_average">average signal level</string>
    <string name="wifi_text_low">low signal level</string>



</resources>
