<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_900"
    android:padding="16dp"
    tools:context=".SplashActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:id="@+id/splash_loading_layout"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.ybq.android.spinkit.SpinKitView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.DoubleBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/white" />

            <TextView
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_width="250dp"
                android:textAllCaps="true"
                android:text="@string/loading"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/splash_loading_done_layout"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_done_24"/>
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:breakStrategy="high_quality"
                android:text="@string/loading_done"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_btn"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:background="@drawable/bg_ads_action_border_5"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/continue_button"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>